--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
        "Name: Tags, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1359,18 +1359,21 @@
       "Jaccard Similarity Score:  45.29475406375343\n",
       "Recall:  44.75743348982786\n",
       "F1 Score:  58.11484006292606\n",
+      "ROC-AUC Score:  72.30484617644431\n",
       "\n",
       "\n",
       "Classifier:  MultinomialNB()\n",
       "Jaccard Similarity Score:  38.107593338158566\n",
       "Recall:  41.72345903377253\n",
       "F1 Score:  52.361493870569234\n",
+      "ROC-AUC Score:  70.72118643751702\n",
       "\n",
       "\n",
       "Classifier:  LinearSVC()\n",
       "Jaccard Similarity Score:  49.504960945746255\n",
       "Recall:  49.82583674087536\n",
       "F1 Score:  60.99746616401952\n",
+      "ROC-AUC Score:  74.80502793211217\n",
       "\n",
       "\n"
      ]
@@ -1390,6 +1393,8 @@
     "    print(\"Recall: \", recall * 100)\n",
     "    f1 = f1_score(Y_test, Y_pred, average='micro')\n",
     "    print(\"F1 Score: \", f1 * 100)\n",
+    "    roc_auc = roc_auc_score(Y_test, Y_pred, average='micro')\n",
+    "    print(\"ROC-AUC Score: \", roc_auc*100)\n",
     "    print(\"\\n\")"
    ]
   },
@@ -2046,23 +2051,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluation: 100%|██████████| 12632/12632 [06:31<00:00, 32.24it/s]\n"
+      "Evaluation: 100%|██████████| 12632/12632 [06:41<00:00, 31.48it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Jaccard Similarity Score of Test Set is: 0.7550206455395079\n",
-      "The Recall of Test Set is:  0.8910766076607661\n",
-      "The F1 Score of Test Set is:  0.8067113714172538\n"
+      "The Jaccard Similarity Score of Train Set is: 0.755030541826421\n",
+      "The Recall of Train Set is:  0.8910891089108911\n",
+      "The F1 Score of Train Set is:  0.8067272542073632\n",
+      "The ROC-AUC Score of Train Set is:  0.9429862366343817\n"
      ]
     }
    ],
@@ -2082,22 +2088,24 @@
     "jaccard = jaccard_score(real, pred, average='samples')\n",
     "recall = recall_score(real, pred, average='micro')\n",
     "f1 = f1_score(real, pred, average='micro')\n",
+    "roc_auc = roc_auc_score(real, pred, average='micro')\n",
     "\n",
-    "print(\"The Jaccard Similarity Score of Test Set is:\", jaccard)\n",
-    "print(\"The Recall of Test Set is: \", recall)\n",
-    "print(\"The F1 Score of Test Set is: \", f1)"
+    "print(\"The Jaccard Similarity Score of Train Set is:\", jaccard)\n",
+    "print(\"The Recall of Train Set is: \", recall)\n",
+    "print(\"The F1 Score of Train Set is: \", f1)\n",
+    "print(\"The ROC-AUC Score of Train Set is: \", roc_auc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluation: 100%|██████████| 3158/3158 [01:36<00:00, 32.64it/s]\n"
+      "Evaluation: 100%|██████████| 3158/3158 [01:38<00:00, 32.16it/s]\n"
      ]
     },
     {
@@ -2106,7 +2114,8 @@
      "text": [
       "The Jaccard Similarity Score of Test Set is: 0.6415876911245815\n",
       "The Recall of Test Set is:  0.7802009187742945\n",
-      "The F1 Score of Test Set is:  0.7078409819547495\n"
+      "The F1 Score of Test Set is:  0.7078409819547495\n",
+      "The ROC-AUC Score of Test Set is:  0.8867209914643459\n"
      ]
     }
    ],
@@ -2124,10 +2133,32 @@
     "jaccard = jaccard_score(real, pred, average='samples')\n",
     "recall = recall_score(real, pred, average='micro')\n",
     "f1 = f1_score(real, pred, average='micro')\n",
+    "roc_auc = roc_auc_score(real, pred, average='micro')\n",
     " \n",
     "print(\"The Jaccard Similarity Score of Test Set is:\", jaccard)\n",
     "print(\"The Recall of Test Set is: \", recall)\n",
-    "print(\"The F1 Score of Test Set is: \", f1)"
+    "print(\"The F1 Score of Test Set is: \", f1)\n",
+    "print(\"The ROC-AUC Score of Test Set is: \", roc_auc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8867209914643459"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(real, pred, average='micro')"
    ]
   },
   {
